2019-10-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Verify that pixel region is not
	negative. Assure that opacity channel is initialized to
	opaqueOpacity.  Update DirectClass representation while
	PseudoClass representation is updated.  Improve read performance
	with uncompressed PCX.

2019-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Image properties are expected to
	appear within the first 512 bytes of the XPM file header.  fixes
	oss-fuzz 18267 "graphicsmagick:coder_PICON_fuzzer: Timeout in
	coder_PICON_fuzzer".

2019-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix tcmalloc configuration report.

2019-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Implement subimage/subrange
	support.

	* coders/mat.c (ReadMATImage, ReadMATImageV4): Implement
	subimage/subrange support.  Should resolve oss-fuzz 14999
	"graphicsmagick/coder_MAT_fuzzer: Out-of-memory in
	graphicsmagick_coder_MAT_fuzzer".

	* coders/tiff.c (TIFFMapBlob): Fix compile problem if
	LOG_TIFF_BLOB_IO is defined.

	* coders/wpg.c (ExtractPostscript): Improve performance.  Avoid
	temporary files if possible.  Avoid additional memory allocations
	if possible.  Should address oss-fuzz issue 18173
	"graphicsmagick:enhance_fuzzer: Timeout in enhance_fuzzer" and
	oss-fuzz issue 17714 "graphicsmagick:coder_WPG_fuzzer: Timeout in
	coder_WPG_fuzzer".

2019-10-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (PNMInteger): Place a generous arbitrary limit on
	the amount of PNM comment text to avoid denial of service
	opportunity.  Fixes oss-fuzz 18162 "Timeout · coder_PNM_fuzzer".

2019-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dps.c (ReadDPSImage): Fix memory leak when OpenBlob()
	reports failure.  Same as ImageMagick CVE CVE-2019-16709.

2019-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
